# autotools-template

./: AUTHORS  Makefile.am  NOTES  README  configure.ac
src/: Makefile.in  hello.c
